# auto-followup

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README-NEW.md  README.md  app.py  pyproject.toml  requirements.txt  structured_logger.py
requirements/: base.txt  dev.txt  prod.txt
src/auto_followup/: __init__.py  app.py
src/auto_followup/api/: __init__.py  rate_limiting.py  routes.py  validation.py
src/auto_followup/config/: __init__.py  settings.py
src/auto_followup/core/: __init__.py  business_days.py  exceptions.py
src/auto_followup/infrastructure/: __init__.py  circuit_breaker.py  logging.py  metrics.py
src/auto_followup/infrastructure/firestore/: __init__.py  models.py  repositories.py
src/auto_followup/infrastructure/http/: __init__.py  mail_writer_client.py  odoo_client.py
src/auto_followup/services/: __init__.py  cancellation.py  processor.py  retry.py  scheduler.py
tests/: conftest.py
tests/unit/: test_business_days.py  test_routes.py  test_scheduler.py
